Fix expand/collapse animation for pg with new look

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-theme-builder.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-theme-builder.scss
@@ -155,7 +155,7 @@
   }
 }
 
-.sv-mobile-side-bar .spg-theme-builder-root {
+.svc-side-bar--mobile .spg-theme-builder-root {
   .spg-nested-panel__content::after {
     width: calc(4 * var(--sjs-base-unit, var(--base-unit, 8px)) + 100%);
     left: calc(-2 * var(--sjs-base-unit, var(--base-unit, 8px)));
